--- a/firebase.html
+++ b/firebase.html
@@ -7,98 +7,6 @@
     <title>Registro de Doctor</title>
     <style>
         /* Tu código CSS aquí... */
-        body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-        }
-
-        h2 {
-            color: #333;
-        }
-
-        form {
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-            width: 300px;
-            margin-bottom: 20px;
-        }
-
-        label {
-            display: block;
-            margin-bottom: 8px;
-            color: #333;
-        }
-
-        input {
-            width: 100%;
-            padding: 8px;
-            margin-bottom: 12px;
-            box-sizing: border-box;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-        }
-
-        button {
-            background-color: #4caf50;
-            color: white;
-            padding: 10px 15px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-        }
-
-        button:hover {
-            background-color: #45a049;
-        }
-
-        ul {
-            list-style-type: none;
-            padding: 0;
-            margin: 0;
-        }
-
-        li {
-            background-color: #fff;
-            padding: 15px;
-            margin-bottom: 10px;
-            border-radius: 4px;
-            box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-            display: flex;
-            flex-direction: column;
-        }
-
-        li strong {
-            font-size: 18px;
-            margin-bottom: 8px;
-        }
-
-        li p {
-            margin: 0;
-            color: #555;
-        }
-
-        li button {
-            background-color: #d9534f;
-            color: white;
-            padding: 6px 10px;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            margin-top: 8px;
-        }
-
-        li button:hover {
-            background-color: #c9302c;
-        }
     </style>
 </head>
 
@@ -123,7 +31,7 @@
         <label for="correo">Correo Electrónico:</label>
         <input type="email" id="correo" name="correo">
 
-        <button type="button" onclick="crearDoctor()">Registrar</button>
+        <button type="button" onclick="crearDoctor()">Guardar</button>
     </form>
 
     <!-- Lista de Doctores en una tabla -->
@@ -162,11 +70,10 @@
         const app = initializeApp(firebaseConfig);
         const database = getDatabase(app);
 
-        // Variable para almacenar el ID del doctor en edición
         let doctorIdToEdit = null;
 
         // Función para crear o actualizar un doctor
-        function crearDoctor() {
+        window.crearDoctor = function () {
             const nombre = document.getElementById("nombre").value;
             const especialidad = document.getElementById("especialidad").value;
             const direccion = document.getElementById("direccion").value;
@@ -198,10 +105,12 @@
 
             // Limpiar el formulario después de crear o actualizar un doctor
             limpiarFormulario();
+            // Actualizar la lista de doctores
+            actualizarListaDoctores();
         }
 
         // Función para llenar los campos del formulario al editar un doctor
-        function editarDoctor(id) {
+        window.editarDoctor = function (id) {
             doctorIdToEdit = id;
             const databaseRef = ref(database, `doctores/${id}`);
             onValue(databaseRef, (snapshot) => {
@@ -219,7 +128,7 @@
         }
 
         // Función para eliminar un doctor
-        function eliminarDoctor(id) {
+        window.eliminarDoctor = function (id) {
             const confirmacion = confirm("¿Está seguro de eliminar este doctor?");
             if (confirmacion) {
                 remove(ref(database, `doctores/${id}`));
@@ -228,6 +137,8 @@
                 doctorIdToEdit = null;
                 // Cambiar el texto del botón de nuevo a "Registrar"
                 document.querySelector("button").innerText = "Registrar";
+                // Actualizar la lista de doctores
+                actualizarListaDoctores();
             }
         }
 
