--- a/firebase.html
+++ b/firebase.html
@@ -80,6 +80,10 @@
             font-size: 18px;
             margin-bottom: 8px;
         }
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
 
         li p {
             margin: 0;
