--- a/firebase.html
+++ b/firebase.html
@@ -84,7 +84,11 @@
             width: 100%;
             border-collapse: collapse;
             margin-top: 20px;
-
+        }
+        th {
+            background-color: #4caf50;
+            color: white;
+        }
         li p {
             margin: 0;
             color: #555;
