--- a/firebase.html
+++ b/firebase.html
@@ -54,10 +54,28 @@
             border: none;
             border-radius: 4px;
             cursor: pointer;
+            margin-top: 8px;
         }
 
         button:hover {
             background-color: #45a049;
+        }
+
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+
+        th, td {
+            border: 1px solid #ddd;
+            padding: 8px;
+            text-align: left;
+        }
+
+        th {
+            background-color: #4caf50;
+            color: white;
         }
 
         ul {
@@ -80,15 +98,7 @@
             font-size: 18px;
             margin-bottom: 8px;
         }
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            margin-top: 20px;
-        }
-        th {
-            background-color: #4caf50;
-            color: white;
-        }
+
         li p {
             margin: 0;
             color: #555;
