--- a/firebase.html
+++ b/firebase.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Doctor</title>
-    <style>
+<style>
         /* Tu código CSS aquí... */
-        body {
+    body {
     font-family: 'Arial', sans-serif;
     background-color: #f4f4f4;
     margin: 0;
@@ -84,7 +84,7 @@ th, td {
 }
 
 th {
-    background-color: #4caf50;
+    background-color: #a8af4c;
     color: white;
 }
 
@@ -133,7 +133,7 @@ li button.eliminar:hover {
     background-color: #c9302c;
 }
 
-    </style>
+</style>
 </head>
 
 <body>
