--- a/firebase.html
+++ b/firebase.html
@@ -290,8 +290,8 @@ li button.eliminar:hover {
                             <td>${doctor.telefono || ""}</td>
                             <td>${doctor.correo || ""}</td>
                             <td>
-                                <button onclick="editarDoctor('${doctorId}') background-color: #3498db">Editar</button>
-                                <button onclick="eliminarDoctor('${doctorId}')background-color: #e74c3c">Eliminar</button>
+                                <button onclick="editarDoctor('${doctorId}')">Editar</button>
+                                <button onclick="eliminarDoctor('${doctorId}')">Eliminar</button>
                             </td>
                         `;
                         bodyTablaDoctores.appendChild(row);
