--- a/firebase.html
+++ b/firebase.html
@@ -7,130 +7,123 @@
     <title>Doctor</title>
 <style>
         /* Tu código CSS aquí... */
-    body {
-    font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-}
+        body {
+            font-family: 'Arial', sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+        }
 
-h2 {
-    color: #333;
-}
+        h2 {
+            color: #333;
+        }
 
-form {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    width: 300px;
-    margin-bottom: 20px;
-}
+        form {
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            width: 300px;
+            margin-bottom: 20px;
+        }
 
-label {
-    display: block;
-    margin-bottom: 8px;
-    color: #333;
-}
+        label {
+            display: block;
+            margin-bottom: 8px;
+            color: #333;
+        }
 
-input {
-    width: 100%;
-    padding: 10px;
-    margin-bottom: 12px;
-    box-sizing: border-box;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-}
+        input {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 12px;
+            box-sizing: border-box;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
 
-button {
-    background-color: #5b4caf;
-    color: white;
-    padding: 10px 15px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 8px;
-}
+        button {
+            background-color: #4caf50;
+            color: white;
+            padding: 10px 15px;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+            margin-top: 8px;
+        }
 
+        button:hover {
+            background-color: #45a049;
+        }
 
+        /* Estilo específico para botón Editar */
+        button.editar {
+            background-color: #3498db;
+        }
 
-/* Estilo específico para botón Editar */
-button.editar {
-    background-color: #3498db;
-}
+        /* Estilo específico para botón Eliminar */
+        button.eliminar {
+            background-color: #e74c3c;
+        }
 
-/* Estilo específico para botón Eliminar */
-button.eliminar {
-    background-color: #e74c3c;
-}
+        table {
+            width: 100%;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
 
-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
-}
+        th, td {
+            border: 1px solid #ddd;
+            padding: 10px;
+            text-align: left;
+        }
 
-th, td {
-    border: 1px solid #ddd;
-    padding: 10px;
-    text-align: left;
-}
+        th {
+            background-color: #4caf50;
+            color: white;
+        }
 
-th {
-    background-color: #a8af4c;
-    color: white;
-}
+        ul {
+            list-style-type: none;
+            padding: 0;
+            margin: 0;
+        }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
+        li {
+            background-color: #fff;
+            padding: 15px;
+            margin-bottom: 10px;
+            border-radius: 4px;
+            box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+        }
 
-li {
-    background-color: #fff;
-    padding: 15px;
-    margin-bottom: 10px;
-    border-radius: 4px;
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
-    display: flex;
-    flex-direction: column;
-}
+        li strong {
+            font-size: 18px;
+            margin-bottom: 8px;
+        }
 
-li strong {
-    font-size: 18px;
-    margin-bottom: 8px;
-}
+        li p {
+            margin: 0;
+            color: #555;
+        }
 
-li p {
-    margin: 0;
-    color: #555;
-}
+        /* Estilo específico para botón Eliminar en lista de doctores */
+        li button.eliminar {
+            background-color: #e74c3c;
+            color: white;
+        }
 
-li button {
-    padding: 6px 10px;
-    border: none;
-    border-radius: 4px;
-    cursor: pointer;
-    margin-top: 8px;
-}
-
-/* Estilo específico para botón Eliminar en lista de doctores */
-li button.eliminar {
-    background-color: #e74c3c;
-    color: white;
-}
-
-/* Estilo específico para botón Eliminar en lista de doctores al pasar el ratón */
-li button.eliminar:hover {
-    background-color: #c9302c;
-}
-
+        /* Estilo específico para botón Eliminar en lista de doctores al pasar el ratón */
+        li button.eliminar:hover {
+            background-color: #c9302c;
+        }
 </style>
 </head>
 
