--- a/firebase.html
+++ b/firebase.html
@@ -35,7 +35,7 @@ form {
 label {
     display: block;
     margin-bottom: 10px;
-    color: #333;
+    color: #0a5796;
 }
 
 input {
@@ -85,7 +85,7 @@ th, td {
 }
 
 th {
-    background-color: #4caf50;
+    background-color: #4c90af;
     color: white;
 }
 
