--- a/firebase.html
+++ b/firebase.html
@@ -9,7 +9,7 @@
         /* Tu código CSS aquí... */
         body {
     font-family: 'Arial', sans-serif;
-    background-color: #f4f4f4;
+    background-color: #002e91;
     margin: 0;
     padding: 0;
     display: flex;
