--- a/firebase.html
+++ b/firebase.html
@@ -48,7 +48,7 @@ input {
 }
 
 button {
-    background-color: #4caf50;
+    
     color: white;
     padding: 12px 20px;
     border: none;
@@ -56,6 +56,9 @@ button {
     cursor: pointer;
     margin-top: 8px;
     transition: background-color 0.3s ease;
+}
+button.registrar {
+    background-color: #003558;
 }
 
 button:hover {
