--- a/firebase.html
+++ b/firebase.html
@@ -9,7 +9,7 @@
         /* Tu código CSS aquí... */
         body {
             font-family: 'Arial', sans-serif;
-            background-color: #255cd1;
+            background-color: #9abaff;
             margin: 0;
             padding: 0;
             display: flex;
