--- a/firebase.html
+++ b/firebase.html
@@ -90,7 +90,7 @@
         }
 
         th {
-            background-color: #cae458;
+            background-color: #000000;
             color: white;
         }
 
